[package]
name = "Kademlia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

tonic = "0.6"
prost = "0.9"
tokio = { version = "1.14", features = ["macros", "rt-multi-thread"] }
tokio-stream = {version = "0.1.8", features = ["net"]}
num = "0.4.0"
rand = "0.8.4"

[build-dependencies]
tonic-build = "0.6.0"

[[bin]]
name = "server"
path = "src/server_main.rs"